--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -57,3 +57,9 @@
     margin-right: 1rem;
     font-weight: 600;
 }
+
+@media (max-width: 50rem) {
+    .social__item {
+        margin: .5rem;
+    }
+}
